add child mortality histogram to page

--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,11 @@
     <h1>Understanding Global Child Mortality Trends</h1>
     <h3>Matthew Goldsberry</h3>
 
-    <!-- Data Sets -->
-    <svg id="sanitation_histogram"></svg>
+    <!-- Charts -->
+    <div class="chart-row">
+        <svg id="sanitation_histogram"></svg>
+        <svg id="child_mortality_histogram"></svg>
+    </div>
 
     <!-- TODO Make Footer Highlight Data Sources -->
     <p>All data source from Our World in Data</p>
