improve title formatting

--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
-    <!-- TODO Make Title Cleaner with CSS -->
-    <h1>Understanding Global Child Mortality Trends</h1>
-    <h3>Matthew Goldsberry</h3>
+    <!-- Page Title -->
+    <header class="page-header">
+        <h1 class="page-title">Understanding Global Child Mortality Trends</h1>
+        <p class="author">Matthew Goldsberry</p>
+    </header>
 
     <!-- Charts -->
     <div class="chart-row">
