fix chart-row centering issue

--- a/app/index.html
+++ b/app/index.html
@@ -15,9 +15,11 @@
     </header>
 
     <!-- Charts -->
-    <div class="chart-row">
-        <svg id="sanitation_histogram"></svg>
-        <svg id="child_mortality_histogram"></svg>
+    <div class="chart-row-container">
+        <div class="chart-row">
+            <svg id="sanitation_histogram"></svg>
+            <svg id="child_mortality_histogram"></svg>
+        </div>
     </div>
 
     <!-- TODO Make Footer Highlight Data Sources -->
