--- a/app/index.html
+++ b/app/index.html
@@ -16,9 +16,14 @@
 
     <!-- Charts -->
     <div class="chart-row-container">
-        <div class="chart-row">
+        <div class="chart-row two-charts">
             <svg id="sanitation_histogram"></svg>
             <svg id="child_mortality_histogram"></svg>
+        </div>
+    </div>
+    <div class="chart-row-container">
+        <div class="chart-row">
+            <svg id="scatterplot"></svg>
         </div>
     </div>
 
@@ -30,6 +35,7 @@
     <script src="js/d3.v6.min.js"></script>
     <!-- Vis js Scripts -->
     <script src="js/histogram.js"></script>
+    <script src="js/scatterplot.js"></script>
     <script src="js/main.js"></script>
 </body>
 
