add choropleth map

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,11 @@
             <svg id="scatterplot"></svg>
         </div>
     </div>
+    <div class="chart-row-container">
+        <div class="chart-row">
+            <svg id="sanitation_map"></svg>
+        </div>
+    </div>
 
     <!-- TODO Make Footer Highlight Data Sources -->
     <p>All data source from Our World in Data</p>
@@ -34,9 +39,10 @@
     <!-- D3 -->
     <script src="js/d3.v6.min.js"></script>
     <!-- Vis js Scripts -->
+    <script src="js/main.js"></script>
     <script src="js/histogram.js"></script>
     <script src="js/scatterplot.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/choroplethMap.js"></script>
 </body>
 
 </html>
