allow data selector dropdown to control visualizations

--- a/app/index.html
+++ b/app/index.html
@@ -33,14 +33,14 @@
         </div>
 
         <div class="column side-column">
-            <svg id="sanitation_choropleth"></svg>
+            <svg id="right_choropleth"></svg>
             <div class="chart-title-between">
                 <select id="data-selector">
                     <option value="sanitation">Pop. Using at Least Basic Sanitation (%)</option>
-                    <option value="test">test</option>
+                    <option value="electricity">Pop. With Access to Electricity (%)</option>
                 </select>
             </div>
-            <svg id="sanitation_histogram"></svg>
+            <svg id="right_histogram"></svg>
         </div>
     </main>
 
